--- a/src/package.json
+++ b/src/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write ./app/**/*.{ts,tsx}"
+    "format": "prettier --write ./**/*.{ts,tsx}"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
