API が圧縮させている時の不具合修正 & ログイン画面の追加

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ GID=1000
 UNAME=node
 LINUX_HOST_IP=172.22.240.52
 SERVER_ADRESS = http://host.docker.internal:3000
+    # // "dev": "SERVER_PATH='http://host.docker.internal:3000' next dev --turbopack",
+    # // "build": "SERVER_PATH='http://host.docker.internal:3000' NODE_ENV=production next build",
+    # // "start": "SERVER_PATH='http://host.docker.internal:3000' next start",
