--- a/src/package.json
+++ b/src/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "NODE_ENV=production next build",
-    "start": "next start",
+    "dev": "dotenv -- bash -c 'SERVER_PATH=$SERVER_ADRESS next dev --turbopack'",
+    "build": "dotenv -- bash -c 'SERVER_PATH=$SERVER_ADRESS NODE_ENV=production next build'",
+    "start": "dotenv -- bash -c 'SERVER_PATH=$SERVER_ADRESS next start'",
+    "dev-local": "SERVER_PATH='https://host.docker.internal:3000' next dev --turbopack",
     "lint": "next lint",
     "format": "prettier --write ./**/*.{ts,tsx}"
   },
   "dependencies": {
+    "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
     "next": "15.2.2",
+    "pako": "^2.1.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0"
@@ -20,8 +23,10 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pako": "^2.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv-cli": "^8.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "prettier": "^3.5.3",
