--- a/src/package.json
+++ b/src/package.json
@@ -18,7 +18,15 @@
     "pako": "^2.1.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "rehype-katex": "^7.0.1",
+    "rehype-stringify": "^10.0.1",
+    "remark": "^15.0.1",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.1",
+    "remark-link-card": "^1.3.1",
+    "remark-math": "^6.0.0",
+    "remark-rehype": "^11.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
